<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Location Alarm</string>
    
    <string name="emptyList">You do not have any element in list</string>
    
    <string name="menuTitle">Application options</string>
    
    <string name="menuLocationsTitle">Locations</string>
    <string name="menuLocationsText">My places</string>
    
    <string name="menuSettingsTitle">Settings</string>
    <string name="menuSetLocationText">Set target location</string>
    
    <string name="menuAboutTitle">About</string>
    <string name="menuAboutText">Application</string>
    
	<string name="action_share">Share</string>
	<string name="action_search">Search</string>
    
	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
    
    <string name="dialogWarningTitle">Warning!</string>
    <string name="dialogNoConnectionText">You need to connect to the Internet first!</string>
    
    <string name="netTitle">Warning!!</string>
    <string name="netText">You need to connect to the Internet first!</string>
    
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>
    
    <string name="mapTitle">Map</string>
    
    <string name="settingsTitle">Settings</string>
   
    <string name="aboutTitle">About</string>
    <string name="aboutWebpage">www.bitknights.com</string>
    <string name="aboutCopyright">Copyright \u00a9 2009\u20132013 BitKnights</string>
    <string name="aboutVersion">Version</string>
    <string name="aboutActionLike">like</string>
    <string name="aboutActionShare">share</string>
    <string name="aboutActionFollow">follow</string>
    <string name="aboutActionTweet">tweet</string>
    <string name="aboutActionEmail">E-mail to BitKnights Support</string>
    
    <string name="refreshText1">Release to update\u2026</string>
    <string name="refreshText2">Update in progress\u2026</string>
	<string formatted="false" name="refreshLastUpdate">Last updated: %s</string>
    <string name="refreshLastUpdateUd">Not yet updated</string>
    <string name="refreshFormat">dd MMMM yyyy HH:mm:ss</string>
    
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    
    <string name="pull_to_refresh_pull_label">Pull to refresh\u2026</string>
    <string name="pull_to_refresh_release_label">Release to refresh\u2026</string>
    <string name="pull_to_refresh_refreshing_label">Loading\u2026</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    

</resources>
